--- a/VttToSrt.ipynb
+++ b/VttToSrt.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMaXeoB8xVIVX4Y+TvwH9/I",
+      "authorship_tag": "ABX9TyOTvq9fiRcO5cpi4Uqah70d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#1 => first run this \n",
         "#this is a library to convert vtt to srt\n",
         "pip install vtt-to-srt3"
       ],
@@ -47,6 +48,7 @@
       },
       "outputs": [],
       "source": [
+        "#2 => then this block\n",
         "#this is for convert all vtt files to srt in colab :)\n",
         "import glob\n",
         "from vtt_to_srt.vtt_to_srt import vtt_to_srt\n",
@@ -60,6 +62,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#3 => at last this :)\n",
         "#this block code is for download srt files you made ;)\n",
         "import glob\n",
         "from google.colab import files\n",
